--- a/chamber_control/cabinet.ipynb
+++ b/chamber_control/cabinet.ipynb
@@ -18,6 +18,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "281f2467-adaa-4f93-a3d8-1e875b56d726",
+   "metadata": {},
+   "source": [
+    "2022-05-11"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7ed8ee5e-d63a-43a2-bc08-3ee3df3ca0e3",
    "metadata": {},
    "source": [
@@ -25,9 +33,364 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0d5ecd13-33a8-4493-974a-e4b4ce937ba7",
+   "metadata": {},
+   "source": [
+    "## Initial Wiring"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ff4c646-d0f0-46c4-bcfd-e3031e1d0932",
+   "metadata": {},
+   "source": [
+    "While connecting up the Nano using breadboard, the button and corresponding LED (will soon control the fan) came on during the inital software development. After some debugging, it seems to be an issue with usign digital pin 4. When I switch to digital pin 5 for detecting the button press, all is well. Below is the initial breadboard wiring diagram:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cf3e81e-7a5f-493c-8a3f-9b85e8e2664d",
+   "metadata": {},
+   "source": [
+    "<img src=\"chanber_controller_wiring_m01.jpg\" alt=\"Wiring Diagram M01\" width=\"1000\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bc71684-f505-421a-bc55-4d099e588082",
+   "metadata": {},
+   "source": [
+    "## Initial Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "339cef67-9c50-4b1a-a700-bcc04187f70b",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "#include <Arduino.h>\n",
+    "#include <Adafruit_SSD1306.h>\n",
+    "#include <Adafruit_I2CDevice.h>\n",
+    "#include <DHT.h>\n",
+    "#include <Adafruit_Sensor.h>\n",
+    "#include <Wire.h>\n",
+    "\n",
+    "\n",
+    "#define buttonLights 2  //input of the light button\n",
+    "#define buttonVent 3   //input of the vents button\n",
+    "#define buttonFan 5     //input for the fan button\n",
+    "#define LEDlights A0\n",
+    "#define LEDVent A1\n",
+    "#define LEDFan A2\n",
+    "#define temp 0\n",
+    "#define hum 1\n",
+    "#define sensorInterval 10000 //read every 10\n",
+    "#define debounceDelay 50 //pushbutton interval\n",
+    "\n",
+    "#define DHTPIN 6  //digital pin for temp and humidity readings\n",
+    "#define DHTTYPE DHT22  //The type of dht probe we are using\n",
+    "\n",
+    "#define SCREEN_WIDTH 128 // OLED display width, in pixels\n",
+    "#define SCREEN_HEIGHT 32 // OLED display height, in pixels\n",
+    "\n",
+    "// Declaration for an SSD1306 display connected to I2C (SDA, SCL pins)\n",
+    "#define OLED_RESET     4 // Reset pin # (or -1 if sharing Arduino reset pin)\n",
+    "\n",
+    "Adafruit_SSD1306 display(SCREEN_WIDTH, SCREEN_HEIGHT, &Wire, OLED_RESET);\n",
+    "\n",
+    "DHT dht(DHTPIN, DHTTYPE);\n",
+    "\n",
+    "byte readingButtonLights;\n",
+    "byte stateButtonLights;\n",
+    "byte lastStateButtonLights = HIGH;\n",
+    "byte stateLights = LOW;\n",
+    "\n",
+    "byte readingButtonFan;\n",
+    "byte stateButtonFan;\n",
+    "byte lastStateButtonFan = HIGH;\n",
+    "byte stateFan = LOW;\n",
+    "\n",
+    "byte readingButtonVent;\n",
+    "byte stateButtonVent;\n",
+    "byte lastStateButtonVent = HIGH;\n",
+    "byte stateVent = LOW;\n",
+    "\n",
+    "unsigned long sensorCycleStart;\n",
+    "unsigned long sensorCycleCurrent;\n",
+    "unsigned long lastDebounceTimeLights;\n",
+    "unsigned long lastDebounceTimeFan;\n",
+    "unsigned long lastDebounceTimeVent;\n",
+    "\n",
+    "\n",
+    "\n",
+    "void setup() {\n",
+    "  // Start Serial\n",
+    "  Serial.begin(9600);\n",
+    "\n",
+    "  //Setup pins\n",
+    "  pinMode(buttonLights, INPUT);\n",
+    "  pinMode(buttonVent, INPUT);\n",
+    "  pinMode(buttonFan, INPUT);\n",
+    "\n",
+    "  pinMode(LEDlights, OUTPUT);\n",
+    "  pinMode(LEDFan, OUTPUT);\n",
+    "  pinMode(LEDVent, OUTPUT);\n",
+    "\n",
+    "  pinMode(13, OUTPUT);   //board status\n",
+    "  \n",
+    "  //setup loop details\n",
+    "  sensorCycleStart = millis();\n",
+    "\n",
+    "  //Setup display\n",
+    "  // SSD1306_SWITCHCAPVCC = generate display voltage from 3.3V internally\n",
+    "  if(!display.begin(SSD1306_SWITCHCAPVCC, 0x3C)) { // Address 0x3C for 128x32\n",
+    "    Serial.println(F(\"SSD1306 allocation failed\"));\n",
+    "    for(;;); // Don't proceed, loop forever\n",
+    "  }\n",
+    "  \n",
+    "  display.display();\n",
+    "  display.clearDisplay();\n",
+    "  delay(200);\n",
+    "  display.setTextSize(1);      // Normal 1:1 pixel scale\n",
+    "  display.setTextColor(SSD1306_WHITE); // Draw white text\n",
+    "  display.setCursor(0, 0);     // Start at top-left corner\n",
+    "  display.write(\"Hello World\");\n",
+    "  display.display();\n",
+    "\n",
+    "  //setup dht\n",
+    "  dht.begin();\n",
+    " \n",
+    "}\n",
+    "\n",
+    "void loop() {\n",
+    "  // put your main code here, to run repeatedly:\n",
+    "\n",
+    " //Determine if we need a sensor read\n",
+    "  if (millis()-sensorCycleStart > sensorInterval){\n",
+    "    //Read temp and humidity\n",
+    "    float t = dht.readTemperature();\n",
+    "    float h = dht.readHumidity();\n",
+    "    \n",
+    "    //Display temp and humidity\n",
+    "    display.clearDisplay();\n",
+    "    display.setTextSize(1);\n",
+    "    display.setCursor(0,0);\n",
+    "    \n",
+    "    char temperature[5];\n",
+    "    dtostrf(t,5,1,temperature);\n",
+    "    \n",
+    "    display.write(\"Temp: \");\n",
+    "    display.write(temperature);\n",
+    "    display.display();\n",
+    "\n",
+    "    char humidity[5];\n",
+    "    dtostrf(h,5,1,humidity);\n",
+    "\n",
+    "    display.setCursor(0,10);\n",
+    "    display.write(\"Humid: \");\n",
+    "    display.write(humidity);\n",
+    "    display.display();\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "\n",
+    "    //update the display\n",
+    "\n",
+    "    //reset sensorCycleStart\n",
+    "    sensorCycleStart = millis();\n",
+    "    Serial.println(\"Sensor Read Triggered\");\n",
+    "    if (digitalRead(13)==HIGH){\n",
+    "      digitalWrite(13, LOW);\n",
+    "      //digitalWrite(LEDlights, LOW);\n",
+    "    }else{\n",
+    "      digitalWrite(13, HIGH);\n",
+    "      //digitalWrite(LEDlights, HIGH);\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  //Evaluate button pushes\n",
+    "\n",
+    "  {//Lights\n",
+    "\n",
+    "  readingButtonLights = digitalRead(buttonLights);\n",
+    "  // check to see if you just pressed the button\n",
+    "  // (i.e. the input went from LOW to HIGH), and you've waited long enough\n",
+    "  // since the last press to ignore any noise:\n",
+    "\n",
+    "  // If the switch changed, due to noise or pressing:\n",
+    "  if (readingButtonLights != lastStateButtonLights) {\n",
+    "    // reset the debouncing timer\n",
+    "    lastDebounceTimeLights = millis();\n",
+    "  }\n",
+    "\n",
+    "  if ((millis() - lastDebounceTimeLights) > debounceDelay) {\n",
+    "    // whatever the reading is at, it's been there for longer than the debounce\n",
+    "    // delay, so take it as the actual current state:\n",
+    "\n",
+    "    // if the button state has changed:\n",
+    "    if (readingButtonLights != stateButtonLights) {\n",
+    "      stateButtonLights = readingButtonLights;\n",
+    "\n",
+    "      //toggle the LED\n",
+    "      if (stateButtonLights == HIGH){\n",
+    "        stateLights = !stateLights;\n",
+    "      }\n",
+    "\n",
+    "      display.clearDisplay();\n",
+    "      display.setCursor(0,0);\n",
+    "      if (stateLights == HIGH){\n",
+    "        display.write(\"Lights On\");\n",
+    "      }else{\n",
+    "        display.write(\"Lights Off\");\n",
+    "      }\n",
+    "      display.display();\n",
+    "    }\n",
+    "  }\n",
+    "  \n",
+    "  //Set the lights state\n",
+    "  digitalWrite(LEDlights, stateLights);\n",
+    "\n",
+    "  //save the reading. Next time through the loop, it'll be the lastButtonState:\n",
+    "  lastStateButtonLights = readingButtonLights;\n",
+    "  }\n",
+    "  \n",
+    "  {//Fan\n",
+    "\n",
+    "  readingButtonFan = digitalRead(buttonFan);\n",
+    "  Serial.print(readingButtonFan);\n",
+    "  // check to see if you just pressed the button\n",
+    "  // (i.e. the input went from LOW to HIGH), and you've waited long enough\n",
+    "  // since the last press to ignore any noise:\n",
+    "\n",
+    "  // If the switch changed, due to noise or pressing:\n",
+    "  if (readingButtonFan != lastStateButtonFan) {\n",
+    "    // reset the debouncing timer\n",
+    "    lastDebounceTimeFan = millis();\n",
+    "  }\n",
+    "\n",
+    "  if ((millis() - lastDebounceTimeFan) > debounceDelay) {\n",
+    "    // whatever the reading is at, it's been there for longer than the debounce\n",
+    "    // delay, so take it as the actual current state:\n",
+    "\n",
+    "    // if the button state has changed:\n",
+    "    if (readingButtonFan != stateButtonFan) {\n",
+    "      stateButtonFan = readingButtonFan;\n",
+    "\n",
+    "      //toggle the LED\n",
+    "      if (stateButtonFan == HIGH){\n",
+    "        stateFan = !stateFan;\n",
+    "      }\n",
+    "\n",
+    "      display.clearDisplay();\n",
+    "      display.setCursor(0,0);\n",
+    "      if (stateFan == HIGH){\n",
+    "        display.write(\"Fan On\");\n",
+    "      }else{\n",
+    "        display.write(\"Fan Off\");\n",
+    "      }\n",
+    "      display.display();\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  //Set the lights state\n",
+    "  digitalWrite(LEDFan, stateFan);\n",
+    "\n",
+    "  //save the reading. Next time through the loop, it'll be the lastButtonState:\n",
+    "  lastStateButtonFan = readingButtonFan;\n",
+    "  }\n",
+    "\n",
+    "  {// Vent Button\n",
+    "  readingButtonVent = digitalRead(buttonVent);\n",
+    "  // check to see if you just pressed the button\n",
+    "  // (i.e. the input went from LOW to HIGH), and you've waited long enough\n",
+    "  // since the last press to ignore any noise:\n",
+    "\n",
+    "  // If the switch changed, due to noise or pressing:\n",
+    "  if (readingButtonVent != lastStateButtonVent) {\n",
+    "    // reset the debouncing timer\n",
+    "    lastDebounceTimeVent = millis();\n",
+    "  }\n",
+    "\n",
+    "  if ((millis() - lastDebounceTimeVent) > debounceDelay) {\n",
+    "    // whatever the reading is at, it's been there for longer than the debounce\n",
+    "    // delay, so take it as the actual current state:\n",
+    "\n",
+    "    // if the button state has changed:\n",
+    "    if (readingButtonVent != stateButtonVent) {\n",
+    "      stateButtonVent = readingButtonVent;\n",
+    "\n",
+    "      //toggle the LED\n",
+    "      if (stateButtonVent == HIGH){\n",
+    "        stateVent = !stateVent;\n",
+    "      }\n",
+    "\n",
+    "      display.clearDisplay();\n",
+    "      display.setCursor(0,0);\n",
+    "      if (stateVent == HIGH){\n",
+    "        display.write(\"Vent On\");\n",
+    "      }else{\n",
+    "        display.write(\"Vent Off\");\n",
+    "      }\n",
+    "      display.display();\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  //Set the lights state\n",
+    "  digitalWrite(LEDVent, stateVent);\n",
+    "    \n",
+    "  // save the reading. Next time through the loop, it'll be the lastButtonState:\n",
+    "  lastStateButtonVent = readingButtonVent;\n",
+    "  }\n",
+    "  //delay(2000);\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d7f6895-7a1b-498f-af58-d0492f4c80c4",
+   "metadata": {},
+   "source": [
+    "## Graph Development"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f38ca99-0264-4a38-8fce-3b10e6d0bcdb",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "void testdrawline() {\n",
+    "  int16_t i;\n",
+    "\n",
+    "  display.clearDisplay(); // Clear display buffer\n",
+    "\n",
+    "  //draw x axis\n",
+    "  display.drawLine(0, 31, 127, 31, SSD1306_WHITE);\n",
+    "\n",
+    "  //draw y axis\n",
+    "  display.drawLine(0, 0, 0, 31, SSD1306_WHITE);\n",
+    "\n",
+    "  //do the drawing\n",
+    "  display.display();\n",
+    "\n",
+    "  for (int i=0; i<128; i++) {\n",
+    "    \n",
+    "    y = random(30,40);\n",
+    "    yplot = 31.0-(y-20.0)/(80.0-20.0)*31.0*i/50.0;\n",
+    "    display.fillCircle(i, yplot, 1, SSD1306_WHITE);\n",
+    "    display.display();\n",
+    "  }\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1204df4a-d048-4392-983b-9fe4d4c0ed04",
+   "id": "efe16bac-5d5d-48ad-96de-3d527cdbf340",
    "metadata": {},
    "outputs": [],
    "source": []
