--- a/chamber_control/cabinet.ipynb
+++ b/chamber_control/cabinet.ipynb
@@ -388,9 +388,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3f6e32ea-b520-4786-8123-70764625f4a1",
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
+   "source": [
+    "# Programming Algorithm\n",
+    "\n",
+    "## Set initial time\n",
+    "## check if ncount is 0, if so, read temp and humidty\n",
+    "## If 60 sec has elapsed, read temp and humidity\n",
+    "## If n element array count less than n\n",
+    "  ### Add Temp and humidity to corresponding n element arrays\n",
+    "  ### else shift all elements down on spot so 0th element becomes 1st element, the n-1 element becomes the nth element.\n",
+    "  ### then add temp and humidity to corresponding n element arrays\n",
+    "  ### if ncount = n, stop incrementing\n",
+    "## based on the count, plot the array elements, x is based on ncount*2\n",
+    "## display the T and H as T:XX.X and H:YY.Y\n",
+    "## Reset SensorCycleCount"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efe16bac-5d5d-48ad-96de-3d527cdbf340",
+   "id": "7fa24737-e723-40d1-8de7-0f08990f0ace",
    "metadata": {},
    "outputs": [],
    "source": []
