--- a/chamber_control/cabinet.ipynb
+++ b/chamber_control/cabinet.ipynb
@@ -353,7 +353,8 @@
    "id": "1d7f6895-7a1b-498f-af58-d0492f4c80c4",
    "metadata": {},
    "source": [
-    "## Graph Development"
+    "## Graph Development\n",
+    "2022-05-11"
    ]
   },
   {
@@ -394,25 +395,43 @@
     "toc-hr-collapsed": true
    },
    "source": [
-    "# Programming Algorithm\n",
+    "## Graphing Algorithm\n",
+    "2022-05-12\n",
     "\n",
-    "## Set initial time\n",
-    "## check if ncount is 0, if so, read temp and humidty\n",
-    "## If 60 sec has elapsed, read temp and humidity\n",
-    "## If n element array count less than n\n",
-    "  ### Add Temp and humidity to corresponding n element arrays\n",
-    "  ### else shift all elements down on spot so 0th element becomes 1st element, the n-1 element becomes the nth element.\n",
-    "  ### then add temp and humidity to corresponding n element arrays\n",
-    "  ### if ncount = n, stop incrementing\n",
-    "## based on the count, plot the array elements, x is based on ncount*2\n",
-    "## display the T and H as T:XX.X and H:YY.Y\n",
-    "## Reset SensorCycleCount"
+    "* Set initial time\n",
+    "* check if ncount is 0, if so, read temp and humidty\n",
+    "* If 60 sec has elapsed, read temp and humidity\n",
+    "* If n element array count less than n\n",
+    "    * Add Temp and humidity to corresponding n element arrays\n",
+    "    * else shift all elements down on spot so 0th element becomes 1st element, the n-1 element becomes the nth element.\n",
+    "    * then add temp and humidity to corresponding n element arrays\n",
+    "    * if ncount = n, stop incrementing\n",
+    "* based on the count, plot the array elements, x is based on ncount*y where y is some integer used to spread out the points on the x axis\n",
+    "* display the T and H as T:XX.X and H:YY.Y\n",
+    "* Reset SensorCycleCount"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dff1b91a-82b9-4925-9ef5-4fda206b7b1f",
+   "metadata": {},
+   "source": [
+    "## Programming update"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3676ff55-c3c8-4649-8c3e-d128a996e2dc",
+   "metadata": {},
+   "source": [
+    "* All buttons and graphing routines are working\n",
+    "* After reviewing the code, **Pin 4** issue is really due to the fact that the OLED screen is using that for **Reset**. We could pick another pin or simply let it be."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fa24737-e723-40d1-8de7-0f08990f0ace",
+   "id": "8bdada95-ed02-42ed-bb2f-a32a34b32a5a",
    "metadata": {},
    "outputs": [],
    "source": []
