updates to journal

--- a/chamber_control/cabinet.ipynb
+++ b/chamber_control/cabinet.ipynb
@@ -416,7 +416,8 @@
    "id": "dff1b91a-82b9-4925-9ef5-4fda206b7b1f",
    "metadata": {},
    "source": [
-    "## Programming update"
+    "## Programming update on Arduino Nano Pin 4 issue\n",
+    "2022-05-12"
    ]
   },
   {
@@ -429,9 +430,273 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6f1e9cab-210f-41db-a20f-b89b746ed4d8",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Thoughts on how to control vents for chamber\n",
+    "2022-05-13"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d48db4c-11be-4821-b536-df697d5b3155",
+   "metadata": {},
+   "source": [
+    "* The plans is to use an attiny84 as the microprocessor for vent control\n",
+    "* The attiny84 will be tied to main microprocessor which will be some form of ATMEGA328P\n",
+    "    * Some form because it could be an Arduino Nano or\n",
+    "    * a bare ATMEGA329P chip.\n",
+    "* The key to doing this is using the TinyWireS library for the Arduino Framework. This library is locate [here](https://github.com/nadavmatalon/TinyWireS).\n",
+    "* The TinyWireS library allows hooking both vents to the 328P for control under I2C.\n",
+    "* The command can be something simply like sending \"0\" for closed or \"1\" for open."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22763603-7753-43bf-9abb-fa8631a7117a",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Attiny84 pin out\n",
+    "<img src=\"ATtiny_x4.png\" alt=\"Attiny84 Pin Diagram\" width=\"1000\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "748b03aa-2869-48e3-8bc4-cf0d46ec9a9a",
+   "metadata": {},
+   "source": [
+    "### Example code for the Slave"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7dd3d324-4032-4371-b03a-4cc835deefff",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "/*\n",
+    "    TinyWireS Library: ATtiny84A-Side (Slave)\n",
+    "    -----------------------------------------\n",
+    "    INTRODUCTION\n",
+    "    ------------\n",
+    "    The following sketch provides a simple example of setting up an ATtiny84A as an I2C Slave device\n",
+    "    on the I2C bus and an Arduino Uno as the I2C Master.\n",
+    "    At runtime, the Arduino Master will request 4 bytes from the ATtiny84A Slave and then print them\n",
+    "    out using the Serial Monitor.\n",
+    "    HW SETUP\n",
+    "    --------\n",
+    "    - Connect Arduino Pin A4 (HW SDA) to ATtiny84A Pin PA6 (SW SDA) with a 2K2 pull-up resistor to 5V\n",
+    "    - Connect Arduino Pin A5 (HW SCL) to ATtiny84A Pin PA4 (SW SCL) with a 2K2 pull-up resistor to 5V\n",
+    "    - Follow the basic hookup for Arduino & ATtiny84A (Common ground for both ICs, 100nF decoupling capacitors,\n",
+    "      10K pullup resistors for RESET pins, and if needed, external crystals)\n",
+    "    RUNNING THE SKETCH\n",
+    "    ------------------\n",
+    "    Upload this sketch to the ATtiny84A and the other example sketch (Arduino_Uno_Master.ino) to the\n",
+    "    Arduino. Then open the Serial Monitor (make sure the Baud Rate is set to 9600).\n",
+    "    BUG REPORTS\n",
+    "    -----------\n",
+    "    Please report any bugs/issues/suggestions at the GITHUB Repository of this library at:\n",
+    "    https://github.com/nadavmatalon/TinyWireS\n",
+    "    LICENSE\n",
+    "    -------\n",
+    "    The MIT License (MIT)\n",
+    "    Copyright (c) 2016 Nadav Matalon\n",
+    "    Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated\n",
+    "    documentation files (the \"Software\"), to deal in the Software without restriction, including without\n",
+    "    limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of\n",
+    "    the Software, and to permit persons to whom the Software is furnished to do so, subject to the following\n",
+    "    conditions:\n",
+    "    The above copyright notice and this permission notice shall be included in all copies or substantial\n",
+    "    portions of the Software.\n",
+    "    THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT\n",
+    "    LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.\n",
+    "    IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,\n",
+    "    WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE\n",
+    "    SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.\n",
+    "*/\n",
+    "\n",
+    "#define __AVR_ATtiny84__\n",
+    "\n",
+    "#include <Arduino.h>\n",
+    "\n",
+    "#if defined(__AVR_ATtiny841__)\n",
+    "#define F_CPU 16000000                          // clock speed: 16MHz (external crystal)\n",
+    "#include \"WireS.h\"                              // I2C library for ATtiny841 (and other modern ATtinys)\n",
+    "#else\n",
+    "#define F_CPU 20000000                          // clock speed: 20MHz (external crystal)\n",
+    "#include \"TinyWireS.h\"                          // I2C library for ATtiny84A (and other older ATtinys)\n",
+    "#endif\n",
+    "\n",
+    "const byte SLAVE_ADDR = 100;\n",
+    "\n",
+    "const byte NUM_BYTES = 4;\n",
+    "\n",
+    "volatile byte data[NUM_BYTES] = { 0, 1, 2, 3 };\n",
+    "\n",
+    "void setup() {\n",
+    "    TinyWireS.begin(SLAVE_ADDR);\n",
+    "    TinyWireS.onRequest(requestISR);\n",
+    "}\n",
+    "\n",
+    "void loop() {}\n",
+    "\n",
+    "void requestISR() {\n",
+    "    for (byte i=0; i<NUM_BYTES; i++) {\n",
+    "        TinyWireS.write(data[i]);\n",
+    "        data[i] += 1;\n",
+    "    }\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8067610d-1c92-4bb6-9e13-0ac133048247",
+   "metadata": {},
+   "source": [
+    "### Example Code Master"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d120b77f-0506-4405-aaf6-00c1296d24f4",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "/*\n",
+    "    TinyWireS Library: Arduino-Uno-Side (Master)\n",
+    "    --------------------------------------------\n",
+    "\n",
+    "    INTRODUCTION\n",
+    "    ------------\n",
+    "    The following sketch provides a simple example of setting up an ATtiny84A as an I2C Slave device \n",
+    "    on the I2C bus and an Arduino Uno as the I2C Master.\n",
+    "\n",
+    "    At runtime, the Arduino Master will request 4 bytes from the ATtiny84A Slave and then print them \n",
+    "    out using the Serial Monitor.\n",
+    "\n",
+    "    HW SETUP\n",
+    "    --------\n",
+    "    - Connect Arduino Pin A4 (HW SDA) to ATtiny84A Pin PA6 (SW SDA) with a 2K2 pull-up resistor to 5V\n",
+    "    - Connect Arduino Pin A5 (HW SCL) to ATtiny84A Pin PA4 (SW SCL) with a 2K2 pull-up resistor to 5V\n",
+    "    - Follow the basic hookup for Arduino & ATtiny84A (Common Ground for both ICs, 100nF decoupling capacitors,\n",
+    "      10K pullup resistors for RESET pins, and if needed, external crystals)\n",
+    "\n",
+    "    RUNNING THE SKETCH\n",
+    "    ------------------\n",
+    "    Upload this sketch to the Arduino Uno and the other example sketch (ATtiny84A_Slave.ino) to the\n",
+    "    ATtiny84A. Then open the Serial Monitor (make sure the Baud Rate is set to 9600).\n",
+    "\n",
+    "    BUG REPORTS\n",
+    "    -----------\n",
+    "    Please report any bugs/issues/suggestions at the GITHUB Repository of this library at:\n",
+    "    https://github.com/nadavmatalon/TinyWireS\n",
+    "\n",
+    "    LICENSE\n",
+    "    -------\n",
+    "    The MIT License (MIT)\n",
+    "    Copyright (c) 2016 Nadav Matalon\n",
+    "\n",
+    "    Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated\n",
+    "    documentation files (the \"Software\"), to deal in the Software without restriction, including without\n",
+    "    limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of\n",
+    "    the Software, and to permit persons to whom the Software is furnished to do so, subject to the following\n",
+    "    conditions:\n",
+    "\n",
+    "    The above copyright notice and this permission notice shall be included in all copies or substantial\n",
+    "    portions of the Software.\n",
+    "\n",
+    "    THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT\n",
+    "    LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.\n",
+    "    IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,\n",
+    "    WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE\n",
+    "    SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.\n",
+    "*/\n",
+    "\n",
+    "#include <Arduino.h>\n",
+    "#include <Wire.h>\n",
+    "\n",
+    "const byte SLAVE_ADDR = 100;\n",
+    "\n",
+    "const byte NUM_BYTES = 4;\n",
+    "\n",
+    "byte data[NUM_BYTES] = { 0 };\n",
+    "\n",
+    "byte bytesReceived = 0;\n",
+    "\n",
+    "unsigned long timeNow = millis();\n",
+    "\n",
+    "void setup() {\n",
+    "    Serial.begin(9600);\n",
+    "    Wire.begin();\n",
+    "    Serial.print(F(\"\\n\\nSerial is Open\\n\\n\"));\n",
+    "}\n",
+    "\n",
+    "void loop() {\n",
+    "    if (millis() - timeNow >= 750) {                                        // trigger every 750mS\n",
+    "        Wire.requestFrom(SLAVE_ADDR, NUM_BYTES);                            // request bytes from slave\n",
+    "        bytesReceived = Wire.available();                                   // count how many bytes received\n",
+    "        if (bytesReceived == NUM_BYTES) {                                   // if received correct number of bytes...\n",
+    "            for (byte i=0; i<NUM_BYTES; i++) data[i] = Wire.read();         // read and store each byte\n",
+    "            printData();                                                    // print the received data\n",
+    "        } else {                                                            // if received wrong number of bytes...\n",
+    "            Serial.print(F(\"\\nRequested \"));                                // print message with how many bytes received\n",
+    "            Serial.print(NUM_BYTES);\n",
+    "            Serial.print(F(\" bytes, but got \"));\n",
+    "            Serial.print(bytesReceived);\n",
+    "            Serial.print(F(\" bytes\\n\"));\n",
+    "        }\n",
+    "        timeNow = millis();                                                 // mark preset time for next trigger\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "void printData() {\n",
+    "    Serial.print(F(\"\\n\"));\n",
+    "    for (byte i=0; i<NUM_BYTES; i++) {\n",
+    "          Serial.print(F(\"Byte[\"));\n",
+    "          Serial.print(i);\n",
+    "          Serial.print(F(\"]: \"));\n",
+    "          Serial.print(data[i]);\n",
+    "          Serial.print(F(\"\\t\"));\n",
+    "    }\n",
+    "    Serial.print(F(\"\\n\"));    \n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93c7a01f-4f9c-473c-82a9-f96c566e8aaa",
+   "metadata": {},
+   "source": [
+    "### This code is currently sorted on the Asus Computer running VirtualBox."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75b9eacc-e94e-4e81-befb-4da110f00ffb",
+   "metadata": {},
+   "source": [
+    "### How the Attiny84 will be programmed. We will use Spence Kondi library and these are the Arduino settings below:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5f04090-c7bc-4bca-8099-6519f0b0a854",
+   "metadata": {},
+   "source": [
+    "<img src=\"PXL_20220513_173216876.jpg\" alt=\"Attiny84 Pin Diagram\" width=\"1000\"/>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bdada95-ed02-42ed-bb2f-a32a34b32a5a",
+   "id": "cb119115-bea1-4ee1-9c34-f7108ce204bf",
    "metadata": {},
    "outputs": [],
    "source": []
